--- a/index/index.html
+++ b/index/index.html
@@ -54,7 +54,7 @@
 <center>
     亲爱的宝贝：
     <div id="elapseClock" style="display:none"></div>
-    <a href='index2.html' id="accept">请点击这里</a>
+    <a href='https://LiuTiedan1.github.io/index/index2.html' id="accept">请点击这里</a>
 </center>
                     </div>
                     <div id="loveu">
