--- a/index/index2.html
+++ b/index/index2.html
@@ -45,7 +45,7 @@ body {
 	text-shadow : 0px 0px 1px #fff;
 }
 body{
-	background-image: url(./bg_105_wrap2.jpg);
+	background-image: url(LiuTiedan1.github.io/index/bg_105_wrap2.jpg);
 }
 </style>
 <script src="jquery-1.7.1.min.js" language="javascript" type="text/javascript"></script>
