--- a/love.html
+++ b/love.html
@@ -7,7 +7,7 @@
   <title>我爱你</title>
     <style>
         body{
-            background-image: url(./img.jpg);
+            background-image: url(https://LiuTiedan1.github.io/images);
         }
         h1{
             position: fixed;
