--- a/love.html
+++ b/love.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +12,7 @@
         }
         h1{
             position: fixed;
-            top: 40%;
+            top: 45%;
             left: 0;
             width: 40%;
             text-align: center;
@@ -21,8 +22,19 @@
             color: #8a98a6;
             padding: 0 20px;
             }
-
-        h2{
+          h2{
+            position: fixed;
+            top: 35%;
+            left: 0;
+            width: 40%;
+            text-align: center;
+            transform:translateY(-50%);
+            font-family: 'Love Ya Like A Sister', cursive;
+            font-size: 70px;
+            color: #8a98a6;
+            padding: 0 20px;
+          }
+        h3{
             position: fixed;
             top: 45%;
             left:70%;
@@ -36,8 +48,11 @@
     </style>
 </head>
 <body>
-  <h1 id="Time"></h1>
-  <h2><span id="demo"></span></h2>
+  <div>
+    <h2>和欣欣在一起的</h2>
+    <h1 id="Time"></h1>
+  </div>
+  <h3><span id="demo"></span></h3>
   <script>
     function timingTime(){
       let start = '2022-11-27 23:26:00'     //开始时间
@@ -51,7 +66,7 @@
       let s = Math.floor(f/ 60) // 小时
       let ss = s % 24
       let day = Math.floor(s  / 24 ) // 天数
-      return day + "天" + ss + "时" + ff + "分" + mm +'秒'
+      return "第" + day + "天" + ss + "时" + ff + "分" + mm +'秒'
     }
     setInterval(()=>{
       document.getElementById('Time').innerHTML = timingTime()
