--- a/love.html
+++ b/love.html
@@ -8,7 +8,7 @@
   <title>我爱你</title>
     <style>
         body{
-            background-image: url(https://LiuTiedan1.github.io/images/img.jpg);
+            background-color: #deebfe;
         }
         h1{
             position: fixed;
