--- a/love.html
+++ b/love.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,30 +13,19 @@
             position: fixed;
             top: 45%;
             left: 0;
-            width: 40%;
+            width: 50%;
             text-align: center;
             transform:translateY(-50%);
             font-family: 'Love Ya Like A Sister', cursive;
-            font-size: 70px;
+            font-size: 60px;
             color: #8a98a6;
             padding: 0 20px;
             }
-          h2{
-            position: fixed;
-            top: 35%;
-            left: 0;
-            width: 40%;
-            text-align: center;
-            transform:translateY(-50%);
-            font-family: 'Love Ya Like A Sister', cursive;
-            font-size: 70px;
-            color: #8a98a6;
-            padding: 0 20px;
-          }
+
         h3{
             position: fixed;
             top: 45%;
-            left:70%;
+            left:60%;
             width: 55%;
             transform:translateY(-50%);
             font-family: 'Love Ya Like A Sister', cursive;
@@ -48,10 +36,7 @@
     </style>
 </head>
 <body>
-  <div>
-    <h2>和欣欣在一起的</h2>
     <h1 id="Time"></h1>
-  </div>
   <h3><span id="demo"></span></h3>
   <script>
     function timingTime(){
@@ -66,7 +51,7 @@
       let s = Math.floor(f/ 60) // 小时
       let ss = s % 24
       let day = Math.floor(s  / 24 ) // 天数
-      return "第" + day + "天" + ss + "时" + ff + "分" + mm +'秒'
+      return "和欣欣在一起的<br>第" + day + "天" + ss + "时" + ff + "分" + mm +'秒'
     }
     setInterval(()=>{
       document.getElementById('Time').innerHTML = timingTime()
