--- a/love.html
+++ b/love.html
@@ -54,12 +54,80 @@
 		<div id="output" class="fon-h3">
 
 		</div>
-		<audio controls autoplay loop class="music" id="myAudio" src="https://webfs.ali.kugou.com/202212061418/963b2e02359ee5312b0507f895d79259/v2/e7321d64aec4081ad1b02c52e1472107/G164/M01/0C/19/5A0DAF1EFYqAIsmjADCp7gIqzbk641.mp3" preload="auto" data-hash="E7321D64AEC4081AD1B02C52E1472107"></audio>
-		<canvas></canvas>
+			<canvas></canvas>
 	</body>
 		
 		<script>
-			var canvas = document.querySelector("canvas"),
+			// 为了防止第二次创建
+		let playState= true
+		function testAutoPlay () {
+    // 返回一个promise以告诉调用者检测结果
+        return new Promise(resolve => {
+		if(playState){
+			        let audio = document.createElement('audio');
+        audio.src = "https://webfs.ali.kugou.com/202212061524/ee1c13fd33e9fb1f01a4fa22b99084df/v2/e7321d64aec4081ad1b02c52e1472107/G164/M01/0C/19/5A0DAF1EFYqAIsmjADCp7gIqzbk641.mp3"
+        //循环播放，如果不需要可注释
+		audio.loop="loop"
+        document.body.appendChild(audio);
+        let autoplay = true;
+        // play返回的是一个promise
+        audio.play().then(() => {
+            // 支持自动播放
+            autoplay = true;
+			console.log("正常播放")
+        }).catch(err => {
+            // 不支持自动播放
+			console.log("不支持播放")
+            autoplay = false;
+        }).finally((e) => {
+            resolve(autoplay);
+        });
+		playState=false
+		}else{
+			resolve(false)
+		}
+
+    });
+}
+
+let audioInfo = {
+    autoplay: false,
+    testAutoPlay () {
+        return testAutoPlay()
+    },
+    // 监听页面的点击事件，一旦点过了就能autoplay了
+    setAutoPlayWhenClick () {
+        function setAutoPlay () {
+            // 设置自动播放为true
+            audioInfo.autoplay = true;
+            document.removeEventListener('click', setAutoPlay);
+            document.removeEventListener('touchend', setAutoPlay);
+        }
+        document.addEventListener('click', setAutoPlay);
+        document.addEventListener('touchend', setAutoPlay);
+    },
+    init () {
+        // 检测是否能自动播放
+        audioInfo.testAutoPlay().then(autoplay => {
+            if (!audioInfo.autoplay) {
+                audioInfo.autoplay = autoplay;
+            }
+        });
+        // 用户点击交互之后，设置成能自动播放
+        audioInfo.setAutoPlayWhenClick();
+    }
+};
+        // PC端
+        document.addEventListener('click', ()=>{
+	    audioInfo.init();
+        });
+        // 移动端
+         document.addEventListener('touchend', ()=>{
+	      audioInfo.init();
+         });
+
+
+	var canvas = document.querySelector("canvas"),
   ctx = canvas.getContext("2d");
 
 var ww,wh;
@@ -176,7 +244,7 @@ requestAnimationFrame(render);
 					this.opts = opts || {};
 					this.source = opts.source;
 					this.output = opts.output;
-					this.delay = opts.delay || 300;
+					this.delay = opts.delay || 400;
 					this.chain = {
 						parent: null,
 						dom: this.output,
