--- a/1.html
+++ b/1.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>我爱你</title>
+		<title>请输入名称</title>
 		<style>
 			body {
 				overflow: hidden;
